# pkmn-swsh-counter

./: CMakeLists.txt  test1.cpp
src/: config.h  encounterDetector.cpp  encounterDetector.h  textrecognizer.cpp  textrecognizer.h  utils.cpp  utils.h
